chore: Add mroe details on swagger documentation
