# swagger-output.json
@@ -23,10 +23,51 @@
     },
     "/users/register": {
       "post": {
-        "description": "",
+        "description": "This endpoint is responsible for creating new users",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "description": "User data",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "username": {
+                  "type": "string",
+                  "example": "alex123"
+                },
+                "password": {
+                  "type": "string",
+                  "example": "batataarroz"
+                },
+                "email": {
+                  "type": "string",
+                  "example": "123alex@gmail.com"
+                },
+                "fullName": {
+                  "type": "string",
+                  "example": "John Doe"
+                }
+              }
+            }
+          }
+        ],
         "responses": {
-          "default": {
-            "description": ""
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "409": {
+            "description": "Conflict"
           }
         }
       }
